<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/round_bg_"
        tools:layout_editor_absoluteX="-214dp"
        tools:layout_editor_absoluteY="-149dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="100sp"
            android:layout_marginRight="30sp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg"
            android:textAlignment="center"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="2sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg"
            android:textAlignment="center"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="100sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/create_account_button"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="2sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/signin_button"
            />

        <Button
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="2sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_google_logo"
            android:text="@string/login_google"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>