<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/round_bg_"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="-149dp"
        >

        <TextView
            android:id="@+id/txtCreateMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/txtCreateMessage"
            android:textColor="@color/colorTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtAdviceMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/txtAdviceMessage"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/txtCategorySelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/txtCategorySelection"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="30sp"

            />

        <TextView
            android:id="@+id/txtMessageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/txtMessageName"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/edtMessageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="30sp"
            android:ems="10"
            android:background="@drawable/round_bg_"
            />

        <TextView
            android:id="@+id/txtMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:text="@string/txtMessageText"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/edtDescriptionMessage"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/round_bg_"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/round_bg_"
                android:text="@string/btnCancel" />

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_bg_"
                android:text="@string/btnSave" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>